opa/namespace-with-label/namespacewithlabelsallowxrd-constraint-template.yaml
# This constraint template will look for the label allowXRD for a namespace
# If its it allows the creation of the resource, else it prevents the creation of the resource
---
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: namespacewithlabelsallowxrd
  annotations:
    description: >-
      Only allow claims to be created if the namespace is labeled with allowXRD for api groups sixt.com
spec:
  crd:
    spec:
      names:
        kind: NamespaceWithLabelsAllowXRD
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package namespacewithlabelsallowxrd

        violation[{"msg": msg}] {
          ns := input.review.object.metadata.namespace
          not data.inventory.cluster["v1"].Namespace[ns].metadata.labels.allowXRD
          msg := sprintf("allowXRD label is missing in %v %v", [ns,input.review])
        }
